<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/aboutVersion"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/aboutVersion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutAuthor"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/aboutAuthor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutVersion" />

    <TextView
        android:id="@+id/aboutEmail"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/aboutEmail"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAuthor" />

</androidx.constraintlayout.widget.ConstraintLayout>